# cmake_learning

./: LICENSE  README.md
multi-plus/: CMakeLists.txt
multi-plus-plus/calc/: CMakeLists.txt
multi-plus-plus/sort/: CMakeLists.txt
multi-plus/sort/: CMakeLists.txt
multi-plus/test1/: CMakeLists.txt
multi-plus/test2/: CMakeLists.txt
multi/calc/: CMakeLists.txt
multi/sort/: CMakeLists.txt
v1/: CMakeLists.txt
v1/src/: div.cpp
v2/: CMakeLists.txt
v2/src/: mult.cpp
v3/: CMakeLists.txt  main.cpp
v3/include/: head.h
v4/: CMakeLists.txt  main.cpp
v5/: CMakeLists.txt
v5/src/: add.cpp  sub.cpp
v6/: CMakeLists.txt  test.cpp
